--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: ruby
-bundler_args: --without debugger
-
 before_install:
   - gem install bundler
 
 install:
-  - bundle install
+  - bundle install --without debugger
 
 script:
   - rspec spec/suite.rb
