--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,17 @@ install:
   - bundle install --without debugger
 
 script:
-  - bundle exec rspec spec/suite.rb
+  - bundle exec rake spec
 
 notifications:
   email:
   - ngiger@ywesee.com
 rvm:
   - ruby-head
+  - 1.9.3
   - 2.1.7
   - 2.2.3
-  - 1.9.3
+  - 2.3.1
 matrix:
   allow_failures:
     - rvm: ruby-head
