--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-.ruby-version
 !*.xls
 #spec/data/*latest*
 data/
@@ -10,4 +9,12 @@ pkg/
 coverage/
 *.bak
 *~
+# Devenv
+.devenv*
+devenv.local.nix
 
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
